--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,9 +25,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}">About</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="https://kirimijesse.github.io/blog/about/">About</a>
+    <a class="sidebar-nav-item" href="https://github.com/kirimijesse" target="_blank">GitHub</a>
   </nav>
 
   <div class="sidebar-item">
